--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebChat</title>
     <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
-    <script defer src="/js/client.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <script defer src="js/client.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <img class= "logo" src="/logo2.jpg" alt="">
+        <img class= "logo" src="logo2.jpg" alt="">
         <h1>Welcome to WebChat App</h1>
     </nav>
     <div class="container">
