--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background: url('bg.jpg') no-repeat center center/cover;">
     <nav>
         <img class= "logo" src="logo2.jpg" alt="">
         <h1>Welcome to WebChat App</h1>
